# connectdisks

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  connectdisks.sln  four-across.sln
.circleci/: config.yml
client/: CMakeLists.txt  Dockerfile  client.vcxproj  client.vcxproj.filters  main.cpp  run-client.cpp  testclient.cpp
client/src/: client.cpp
connectdisks/: connectdisks.vcxproj  connectdisks.vcxproj.filters  testboard.cpp  testclientserver.cpp  testconnectdisks.cpp
connectdisks/include/: type_utility.hpp
connectdisks/include/connectdisks/: board.hpp  client.hpp  connectdisks.hpp  server.hpp
connectdisks/src/: board.cpp  client.cpp  connectdisks.cpp  server.cpp
game/: CMakeLists.txt  game.vcxproj  game.vcxproj.filters
game/tests/: testboard.cpp  testgame.cpp
include/: logging.hpp  signals-helper.hpp  signals_helper.hpp  type-utility.hpp
include/connectdisks/: board.hpp  client.hpp  connectdisks.hpp  connection.hpp  gamelobby.hpp  messaging.hpp  server.hpp
include/four-across/game/: board.hpp  game.hpp
include/four-across/networking/: messaging.hpp
include/four-across/networking/client/: client.hpp  consoleclient.hpp
include/four-across/networking/server/: connection.hpp  gamelobby.hpp  server.hpp
server/: CMakeLists.txt  Dockerfile  run-server.cpp  server.vcxproj  server.vcxproj.filters  testserver.cpp
src/: board.cpp  client.cpp  connectdisks.cpp  connection.cpp  consoleclient.cpp  game.cpp  gamelobby.cpp  server.cpp
